erDiagram
    direction LR

    USER ||--o{ VIDEO : "uploads"
    USER ||--o{ COMMENT : "writes"
    VIDEO ||--o{ COMMENT : "has"

    USER {
        ObjectId _id PK
        string username UK
        string email UK
        string password "bcrypt hash, select false"
        string googleId "sub claim, sparse unique"
        string displayName
        string avatar
        string channelDescription
        number subscribers
        string resetPasswordToken "SHA-256"
        Date resetPasswordExpire
        Date passwordChangedAt "invalidates earlier JWTs"
        Date createdAt
        Date updatedAt
    }

    VIDEO {
        ObjectId _id PK
        ObjectId user FK
        string title
        string description
        string category "enum of 7 categories"
        string status "UPLOADING PROCESSING READY ERROR"
        string visibility "public private unlisted"
        string rawS3Key
        string hlsUrl "CloudFront master m3u8"
        string thumbnailUrl
        number duration "seconds"
        number fileSize "bytes"
        string mimeType
        number views
        ObjectId_array likes FK
        ObjectId_array dislikes FK
        string_array tags
        Date createdAt
        Date updatedAt
    }

    COMMENT {
        ObjectId _id PK
        ObjectId video FK
        ObjectId user FK
        string content
        Date createdAt
        Date updatedAt
    }
